# movease-application

./: docker-compose.yml
backend-movease/: Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml
backend-movease/app/: main.py
backend-movease/app/core/: config.py
backend-movease/app/core/infrastructure/: redis_client.py
backend-movease/app/domain/: IncidentServices.py
backend-movease/app/domain/model/: Incident.py
backend-movease/app/routes/: incidentsRoute.py
frontend-movease/: Dockerfile  bun.lockb  package.json  svelte.config.js
frontend-movease/src/routes/: +page.svelte  Nav.svelte
frontend-movease/src/routes/incidents/: +page.svelte
frontend-movease/src/routes/new-incident/: +page.svelte
