[tool.poetry]
name = "moveease backend"
version = "0.1.0"
description = ""
authors = ["Diego22rct <diegorafaelcisnerostafur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
redis = {extras = ["hiredis"], version = "^5.2.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
